--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/directives.js"></script>
 
     <script src="lib/ion-affix/ion-affix.js"></script>
   </head>
